// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowCard loads correctly for future shows 1`] = `
<div
  className="future showCard"
>
  <div
    className="image"
  >
    <Memo(ImageElement)
      alt="A great image"
      height={291}
      image={
        Object {
          "description": "A great image",
          "url": "https://example.com/wide.png",
        }
      }
      layout="fixed"
      width={291}
    />
  </div>
  <a
    href="alquists-revenge"
  >
    <h3>
      Alquist's revenge
    </h3>
    <div
      className="showDescription"
      dangerouslySetInnerHTML={
        Object {
          "__html": "All the acting",
        }
      }
    />
  </a>
</div>
`;

exports[`ShowCard loads correctly for past shows 1`] = `
<div
  className="past showCard"
>
  <div
    className="image"
  >
    <Memo(ImageElement)
      alt="A great image"
      height={291}
      image={
        Object {
          "description": "A great image",
          "url": "https://example.com/wide.png",
        }
      }
      layout="fixed"
      width={291}
    />
  </div>
  <a
    href="alquists-revenge"
  >
    <h3>
      Alquist's revenge
    </h3>
    <div
      className="showDescription"
      dangerouslySetInnerHTML={
        Object {
          "__html": "All the acting",
        }
      }
    />
  </a>
</div>
`;

exports[`ShowCard loads correctly with a ticket link 1`] = `
<div
  className="future showCard"
>
  <div
    className="image"
  >
    <Memo(ImageElement)
      alt="A great image"
      height={291}
      image={
        Object {
          "description": "A great image",
          "url": "https://example.com/wide.png",
        }
      }
      layout="fixed"
      width={291}
    />
  </div>
  <h4
    className="tickets"
  >
    <a
      href="https://example.com"
    >
      Tickets
    </a>
  </h4>
  <a
    href="alquists-revenge"
  >
    <h3>
      Alquist's revenge
    </h3>
    <div
      className="showDescription"
      dangerouslySetInnerHTML={
        Object {
          "__html": "All the acting",
        }
      }
    />
  </a>
</div>
`;
